[gd_scene load_steps=12 format=3 uid="uid://cqu6xa0844tce"]

[ext_resource type="PackedScene" uid="uid://bin1esr2i0gfc" path="res://scenes/player.tscn" id="1_sux3v"]
[ext_resource type="PackedScene" uid="uid://bpdxao1oh1o1u" path="res://scenes/bubble.tscn" id="2_ms1ho"]
[ext_resource type="PackedScene" uid="uid://brfiglux2e12a" path="res://scenes/wind.tscn" id="3_ab5f5"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="4_rw4ev"]
[ext_resource type="PackedScene" uid="uid://o7jmhtfl8h1k" path="res://scenes/button.tscn" id="7_3odh7"]
[ext_resource type="PackedScene" uid="uid://b5i8bra1hq4dw" path="res://scenes/door.tscn" id="8_k3xr5"]
[ext_resource type="Script" path="res://scripts/latch.gd" id="9_uscrk"]
[ext_resource type="Texture2D" uid="uid://cf0d05478jcsy" path="res://assets/levels/level2.png" id="10_2ks85"]
[ext_resource type="PackedScene" uid="uid://2ml4fnft5bea" path="res://scenes/win_object.tscn" id="10_t7kjo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsve4"]
size = Vector2(1426, 1105)

[sub_resource type="Curve2D" id="Curve2D_gyuj8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3004, -1900, 0, 0, 0, 0, -3004, -800)
}
point_count = 2

[node name="Root" type="Node2D"]

[node name="Player" parent="." node_paths=PackedStringArray("controlled") instance=ExtResource("1_sux3v")]
acceleration = 1200.0
controlled = NodePath("../Bubble")
bubble_scene = ExtResource("2_ms1ho")

[node name="Wind" parent="." instance=ExtResource("3_ab5f5")]
position = Vector2(3232, -21)
acceleration = 200.0
wind_timeout = 7

[node name="Area" type="CollisionShape2D" parent="Wind"]
position = Vector2(-2291, -1348.5)
shape = SubResource("RectangleShape2D_gsve4")

[node name="Path2D" type="Path2D" parent="Wind"]
curve = SubResource("Curve2D_gyuj8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-59, -1726)
script = ExtResource("4_rw4ev")

[node name="Bubble" parent="." instance=ExtResource("2_ms1ho")]
position = Vector2(-96, -1760)
surface = 15.0

[node name="Button1" parent="." instance=ExtResource("7_3odh7")]
position = Vector2(648, -1038)

[node name="Button2" parent="." instance=ExtResource("7_3odh7")]
position = Vector2(1034, -1354)

[node name="Button3" parent="." instance=ExtResource("7_3odh7")]
position = Vector2(1455, -1618)

[node name="Door1" parent="." instance=ExtResource("8_k3xr5")]
position = Vector2(4, -730)
rotation = 1.5708

[node name="win_object" parent="." instance=ExtResource("10_t7kjo")]
position = Vector2(-1, -577)

[node name="Latch" type="Node2D" parent="."]
script = ExtResource("9_uscrk")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(944, -1240)
scale = Vector2(0.733236, 0.733236)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-1036.5, 763.738, -1134.7, 763.738, -1156.52, 752.827, -1167.43, 720.095, -1167.43, 676.453, -1156.52, 643.722, -1134.7, 632.811, -1069.23, 621.901, -938.306, 632.811, -687.364, 621.901, -469.153, 643.722, -65.4631, 621.901, 447.332, 632.811, 687.364, 621.901, 872.843, 610.99, 971.038, 632.811, 1352.91, 621.901, 1516.56, 610.99, 1658.4, 621.901, 1734.78, 610.99, 1723.86, 261.853, 1767.51, 0, 1789.33, -174.569, 1745.69, -403.69, 1712.95, -654.632, 1691.13, -840.111, 1734.78, -1069.23, 1494.74, -1080.14, 1287.44, -1101.96, 1156.52, -1123.79, 938.306, -1101.96, 741.917, -1069.23, 480.064, -1069.23, 272.764, -1080.14, 32.7317, -1080.14, 32.7317, -1080.14, -261.853, -1091.05, -621.901, -1101.96, -916.485, -1080.14, -1134.7, -1080.14, -1396.55, -1069.23, -1407.46, -1047.41, -1592.94, -1036.5, -1603.85, -851.022, -1625.67, -676.453, -1636.58, -327.316, -1636.58, 218.211, -1625.67, 621.901, -1603.85, 643.722, -1538.39, 632.811, -1451.1, 632.811, -1418.37, 632.811, -1396.55, 665.543, -1396.55, 720.095, -1418.37, 763.738, -1451.1, 774.648, -1516.56, 763.738, -1538.39, 763.738, -1560.21, 796.469, -1538.39, 851.022, -1538.39, 938.306, -1549.3, 992.859, -1549.3, 1025.59, -1527.48, 1058.32, -1472.92, 1069.23, -1342, 1058.32, -1036.5, 1058.32, -1047.41, 927.396, -1025.59, 840.111, -1025.59, 796.469, 1996.63, 971.038, -905.575, 1254.71, -1974.81, 1352.91, -1996.63, -1287.44, 1963.9, -1352.91, 1996.63, 971.038, -1025.59, 796.469)

[node name="Level2" type="Sprite2D" parent="."]
position = Vector2(944, -1240)
scale = Vector2(0.733236, 0.733236)
texture = ExtResource("10_2ks85")

[connection signal="status_change" from="Button1" to="Latch" method="_on_button_1_status_change"]
[connection signal="status_change" from="Button2" to="Latch" method="_on_button_2_status_change"]
[connection signal="status_change" from="Button3" to="Latch" method="_on_button_3_status_change"]
[connection signal="status_change" from="Latch" to="Door1" method="change_state"]
